Mon Jan 30 15:46:14 1995 Chris Provenzano (proven@mit.edu)

	* int-proto.h Update prototypes for krb5_get_cred_via_tgt(), and
		krb5_get_cred_via_2tgt().

	* get_fcreds.c (krb5_get_for_creds()) 
	* gc_via_tgt.c (krb5_get_cred_via_tgt())
	* gc_2tgt.c (krb5_get_cred_via_2tgt())
		Removed krb5_enctype argument. Pass NULL list of encryption
		types to krb5_send_tgs to get default encryption types.

	* gc_frm_kdc.c Removed krb5_enctype argument passed to 
		krb5_get_cred_via_tgt()

	* send_tgs.c (krb5_send_tgs()) Changed krb5_enctype arg to
		krb5_enctype *, a NULL terminated array of encryption 
		types. If argument is NULL then krb5_send_tgs() will 
		use defaul list of encryption types.

	* send_tgs.c (krb5_send_tgs()) To encrypt request ticket use
		usecred->keyblock.etype instead of (and now defunct) 
		krb5_enctype arg.

	* init_ctx.c Added krb5_set_default_in_tkt_etypes() and
		krb5_get_default_in_tkt_etypes().
	
	* rd_req.c, rd_req_decode.c Removed typedef for rdreq_key_proc
		and use krb5_rd_req_decoded in its place.

Mon Jan 30 11:26:05 1995 Chris Provenzano (proven@mit.edu)

	* get_fcreds.c Really needs #include<krb5/asn1.h> for definition
		of krb5_is_krb_error()

Sat Jan 28 14:45:55 1995 Chris Provenzano (proven@mit.edu)

	* in_tkt_sky.c (skey_keyproc()), rd_req_dec.c (krb5_rd_req_decoded())
		use new API for krb5_kt_get_entry.

Fri Jan 27 15:45:45 1995 Chris Provenzano (proven@mit.edu)

	* get_fcreds.c Removed #include<krb5/crc-32.h> and #include<krb5/asn1.h>

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

	* Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Dec 19 21:55:44 1994  Theodore Y. Ts'o  (tytso@dcl)

	* init_ctx.c: New file.  Initializes and frees the krb5_context
	  structure.

Wed Dec  7 17:52:08 1994    <tytso@localhost>

	* rd_req_dec.c (decrypt_authenticator): If the subkey doesn't